// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridItem should render correctly 1`] = `
<DocumentFragment>
  <div
    class="artifak__sc-18dncu9-0 bhKUIG"
  >
    Grid Item
  </div>
</DocumentFragment>
`;

exports[`GridItemBase should render correctly 1`] = `
<DocumentFragment>
  <div
    class="artifak__sc-18dncu9-0 bhKUIG"
  >
    Grid Item Base
  </div>
</DocumentFragment>
`;
